Closed Bug 884831 Opened 13 years ago Closed 11 years ago

GTK3 - crash at browser end [@ XFreeColormap() ]

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(2 files)

The GTK3 browser crashes when it's closed: #4 <signal handler called> #5 XFreeColormap (dpy=0x0, cmap=32) at FreeCmap.c:41 #6 0x0000003f7465317a in gdk_x11_visual_finalize (object=0x7fc415d157b0 [GdkX11Visual]) at gdkvisual-x11.c:85 #7 0x00000039dd01486b in g_object_unref (_object=0x7fc415d157b0) at gobject.c:3023 #8 0x0000003f7464fb20 in gdk_x11_screen_finalize (object=0x7fc415d7e600 [GdkX11Screen]) at gdkscreen-x11.c:185 #9 0x00000039dd01486b in g_object_unref (_object=0x7fc415d7e600) at gobject.c:3023 #10 0x0000003f746420f7 in gdk_x11_display_finalize (object=0x7fc415d86480 [GdkX11Display]) at gdkdisplay-x11.c:1797 #11 0x00000039dd01486b in g_object_unref (_object=0x7fc415d86480) at gobject.c:3023 #12 0x00007fc40f6f43d2 in MOZ_gdk_display_close (display=0x7fc415d86480 [GdkX11Display]) at /home/komat/tmp668-trunk/src/toolkit/xre/nsAppRunner.cpp:2632 #13 0x00007fc40f6f78f1 in XREMain::XRE_main (this=0x7fff7b76cb10, argc=4, argv=0x7fff7b76dfe8, aAppData=0x7fff7b76ccc0) at /home/komat/tmp668-trunk/src/toolkit/xre/nsAppRunner.cpp:3986 #14 0x00007fc40f6f79ab in XRE_main (argc=4, argv=0x7fff7b76dfe8, aAppData=0x7fff7b76ccc0, aFlags=0) at /home/komat/tmp668-trunk/src/toolkit/xre/nsAppRunner.cpp:4126 #15 0x0000000000404977 in do_main (argc=4, argv=0x7fff7b76dfe8, xreDirectory=0x7fc415d3a540) at /home/komat/tmp668-trunk/src/browser/app/nsBrowserApp.cpp:272 #16 0x0000000000404d5a in main (argc=4, argv=0x7fff7b76dfe8) at /home/komat/tmp668-trunk/src/browser/app/nsBrowserApp.cpp:632 it's because the display (dpy) is NULL.
Attached file gtk test program
This simple test program demonstrates the bug in GTK+ 3.4.4. I haven't tried newer version, but it would be appropriate to fix the bug in GTK+.
Assignee: nobody → stransky
The GTK bug has been fixed.
yes, but in which version? We may create a workaround for older&broken gtk3 systems.
Karl, what do you think about the workaround here? Does it help if we don't call gdk_display_close() on broken gtk versions?
Flags: needinfo?(karlt)
We can skip gdk_display_close, if necessary.
Flags: needinfo?(karlt)
The GTK3 fix is included in gtk3-3.9.8
Disable display close for broken gtk3.
Attachment #794644 - Flags: review?(karlt)
The gtk3 update already hit Fedoras, I guess we don't need the workaround anymore.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → WONTFIX
Attachment #794644 - Flags: review?(karlt)
Blocks: 1034064
No longer blocks: 1034064
(In reply to Martin Stránský from comment #9) > The gtk3 update already hit Fedoras, I guess we don't need the workaround > anymore. We do. Lee Salzman found that's the reason why the debug tests are crashing on elm.
Status: RESOLVED → REOPENED
Resolution: WONTFIX → ---
Attachment #794644 - Flags: review?(karlt)
Attachment #794644 - Flags: review?(karlt) → review+
Status: REOPENED → RESOLVED
Closed: 12 years ago11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
See Also: → 1175171
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: