Bug 884831 - GTK3 - crash at browser end [@ XFreeColormap() ], r=karlt